--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,12 @@ html {
 .react-flow__renderer{
   pointer-events: none;
 }
+.react-flow__resize-control.line{
+  border-color: #00000000 !important;
+}
+.react-flow__resize-control.handle{
+  display: none !important;
+}
+.react-flow__resize-control.line.top, .react-flow__resize-control.line.bottom {
+  cursor: auto;
+}
