--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,7 @@ html {
 .react-flow__resize-control.line.top, .react-flow__resize-control.line.bottom {
   cursor: auto;
 }
+
+.react-flow__viewport  {
+  transform: none !important;
+}
