--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,9 @@ html {
   padding: 1rem;
 } */
 
-.container {
-  height: 900px;
-  overflow: auto;
-  
-}
 
-.gantt-line-body{
+
+/* .gantt-line-body{
  cursor: pointer;
 }
 
@@ -37,8 +33,4 @@ html {
 }
 .react-flow__resize-control.line.top, .react-flow__resize-control.line.bottom {
   cursor: auto;
-}
-
-/* .react-flow__viewport  {
-  transform: none !important;
 } */
