--- a/src/Gantt/index.module.scss
+++ b/src/Gantt/index.module.scss
@@ -20,5 +20,11 @@
     .react-flow__resize-control.line.bottom {
       cursor: auto;
     }
+
+    .gantt-table {
+      ::-webkit-scrollbar {
+        display: none;
+      }
+    }
   }
 }
